--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -25,7 +25,7 @@
   <link media="all" href="catalog/view/theme/default/css/wishlist.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/transation.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/edit.css" type="text/css" rel="stylesheet">
-
+  <link media="all" href="catalog/view/theme/default/css/orderdetails.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div class="header_common">
