--- a/catalog/view/theme/default/template/account/login.twig
+++ b/catalog/view/theme/default/template/account/login.twig
@@ -1,4 +1,5 @@
 {{ header }}
+
 <div class="container" style="margin-top: 64px;">
   <div class="row main-login-bg">
     <!--  -->
@@ -14,18 +15,29 @@
             <form name="theForm" method="post" class="j-login-form" action="">
               <div class="list-item">
                 <div class="item-title">
-                  <span class="undone">{{ entry_email }}:</span>
+                  <span class="undone">{{ entry_customer }}:</span>
                 </div>
                 <ul style="position: absolute; margin-top: 36px; min-width: 271px; visibility: hidden; z-index: 11;" class="emailist"></ul>
-                <input class="inputMailList" name="email" value="" id="returning_email" type="text" />
+                  {% if error_warning %}
+                    <input class="inputMailList" name="email" value="" style="border-color:red;" required id="returning_email" type="text" />
+                    <div class="input-error-txt" style="color:red;">{{ error_login }}</div>
+                      {#<p class="login-title-p"> <font id="login_password_tip"></font> </p>#}
+                  {% else %}
+                    <input class="inputMailList" name="email" value="" required id="returning_email" type="text" />
+                  {% endif %}
                 <p class="login-title-p"> <font id="login_address_tip"></font> </p>
               </div>
               <div class="list-item">
                 <div class="item-title">
                   <span class="undone">{{ entry_password }}:</span>
                 </div>
-                <input name="password" value="" id="returning_password" type="password" />
-                <p class="login-title-p"> <font id="login_password_tip"></font> </p>
+                {% if error_warning %}
+                <input name="password" value="" id="returning_password" required style="border-color:red;" type="password" />
+                <div class="input-error-txt" style="color:red;">{{ error_passwords }}</div>
+                {#<p class="login-title-p"> <font id="login_password_tip"></font> </p>#}
+                {% else %}
+                  <input name="password" value="" id="returning_password" required type="password" />
+                {% endif %}
               </div>
               <div class="sign-in-btn sign-in-lt">
                 <input name="return" type="hidden" />
@@ -39,7 +51,7 @@
                     <div></div>
                   </div> </button>
                 <input class="submit-button she-btn-black she-btn-l j-signin-submit" name="submit" value="{{ text_sign }}" type="submit" />
-                <p> <a class="forget-sign-in" href="#">{{ text_forgotten }}</a> </p>
+                <p> <a class="forget-sign-in" href="{{ forgotten }}">{{ text_forgotten }}</a> </p>
               </div>
               {#<div class="sign-in-con-divide">#}
                 {#<span>Or</span>#}
@@ -75,37 +87,64 @@
                   <span class="undone">{{ entry_fullname }}:</span>
                 </div>
                 <ul style="position: absolute; margin-top: 36px; min-width: 271px; visibility: hidden; z-index: 11;" class="emailist"></ul>
-                <input class="inputMailList-one" name="fullname" value="" size="6" maxlength="32" id="fullname" type="text" />
-                  {#<p class="login-title-p"> <font id="error_email">The Email has been used by others. Please specify another Email.</font> </p>#}
+
+                  {% if error_fullname_x %}
+                    <input class="inputMailList-one" name="fullname" value="" maxlength="32" required id="fullname" style="border-color: red;" type="text" />
+                    <div class="input-error-txt" style="color:red;">{{ error_fullname }}</div>
+                  {% else %}
+                    <input class="inputMailList-one" name="fullname" value="" maxlength="32" required id="fullname" type="text" />
+                  {% endif %}
               </div>
               <div class="list-item">
                 <div class="item-title">
                   <span class="undone">{{ entry_phone }}:</span>
                 </div>
                 <ul style="position: absolute; margin-top: 36px; min-width: 271px; visibility: hidden; z-index: 11;" class="emailist"></ul>
-                <input class="inputMailList-one" name="email" value="" size="41" maxlength="96" id="email" type="text" />
-                {#<p class="login-title-p"> <font id="error_email">The Email has been used by others. Please specify another Email.</font> </p>#}
+                  {% if error_telephone_x %}
+                    <input class="inputMailList-one" name="telephone" value="" size="11"  required id="telephone" type="text" style="border-color: red;" />
+                    <div class="" style="color:red;">{{ error_exists_telephone }}</div>
+                  {% else %}
+                    <input class="inputMailList-one" name="telephone" value="" size="11"  required id="telephone" type="text" "/>
+                  {% endif %}
               </div>
               <div class="list-item">
                 <div class="item-title">
                   <span class="undone">{{ entry_email }}:</span>
                 </div>
-                <input name="email" size="21" maxlength="40" id="email"  type="email" />
-                <p class="login-title-p"> <font id="error_confirm_password"></font> </p>
+
+                {#<p class="login-title-p"> <font id="error_confirm_password"></font> </p>#}
+                  {% if error_email_x %}
+                    <input name="email" size="21" maxlength="40" id="email"  required type="email" style="border-color: red;"/>
+                    <div class="input-error-txt" style="color: red;">{{ error_exists_email }}</div>
+                  {% else %}
+                    <input name="email" size="21" maxlength="40" id="email"  required type="email" />
+                  {% endif %}
               </div>
               <div class="list-item">
                 <div class="item-title">
                   <span class="undone">{{ entry_password }}::</span>
                 </div>
-                <input name="password" size="21" maxlength="40" id="password" onkeyup="this.value=this.value.replace(/\s+/g,'')" type="password" />
-                <p class="login-title-p"> <font id="error_password"></font> </p>
+
+                {#<p class="login-title-p"> <font id="error_password"></font> </p>#}
+                  {% if error_password_x %}
+                    <input name="password" size="" maxlength="32" id="password" required style="border-color: red;" onkeyup="this.value=this.value.replace(/\s+/g,'')" type="password" />
+                    <div class="input-error-txt" style="color: red;">{{ error_password }}</div>
+                      {% else %}
+                    <input name="password" size="" maxlength="32" id="password" required onkeyup="this.value=this.value.replace(/\s+/g,'')" type="password" />
+                  {% endif %}
               </div>
               <div class="list-item">
                 <div class="item-title">
                   <span class="undone">{{ entry_confirm }}:</span>
                 </div>
-                <input name="password1" size="21" maxlength="40" id="password1" onkeyup="this.value=this.value.replace(/\s+/g,'')" type="password" />
-                <p class="login-title-p"> <font id="error_confirm_password"></font> </p>
+
+                {#<p class="login-title-p"> <font id="error_confirm_password"></font> </p>#}
+                  {% if error_confirm_x %}
+                    <input name="confirm" size="" maxlength="32" id="confirm" required style="border-color: red;" onkeyup="this.value=this.value.replace(/\s+/g,'')" type="password" />
+                    <div class="" style="color: red;">{{ error_confirm }}</div>
+                      {% else %}
+                    <input name="confirm" size="" maxlength="32" id="confirm" required onkeyup="this.value=this.value.replace(/\s+/g,'')" type="password" />
+                  {% endif %}
               </div>
 
               <div style="display: none;">
